--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="devOpsApp">
+<html lang="en" ng-app="framework">
   <head>
     <base href="/">
     <title>framework frontend template</title>
